crates/rattler_lock/src/snapshots/rattler_lock__test__v6__derived-channel-lock.yml.snap
---
source: crates/rattler_lock/src/lib.rs
expression: conda_lock
---
version: 7
platforms:
  - name: win-64
environments:
  default:
    channels:
      - url: "https://conda.anaconda.org/conda-forge/"
    packages:
      win-64:
        - conda: "https://conda.anaconda.org/conda-forge/win-64/python-3.12.0-h2628c8c_0_cpython.conda"
        - conda_source: "child-package[24fd55ae] @ child-package"
packages:
  - conda: "https://conda.anaconda.org/conda-forge/win-64/python-3.12.0-h2628c8c_0_cpython.conda"
    sha256: 90553586879bf328f2f9efb8d8faa958ecba822faf379f0a20c3461467b9b955
    md5: defd5d375853a2caff36a19d2d81a28e
    license: Python-2.0
    size: 16140836
    timestamp: 1696321871976
  - conda_source: "child-package[24fd55ae] @ child-package"
    version: 0.1.0
    build: pyhbf21a9e_0
    subdir: noarch
    noarch: python
    depends:
      - python
