crates/rattler_lock/src/snapshots/rattler_lock__test__v6__options-lock.yml.snap
---
source: crates/rattler_lock/src/lib.rs
assertion_line: 583
expression: conda_lock
---
version: 7
platforms: []
environments:
  with-channel-priority:
    channels: []
    options:
      channel-priority: disabled
    packages: {}
  with-default-channel-priority:
    channels: []
    packages: {}
  with-default-strategy:
    channels: []
    packages: {}
  with-exclude-newer:
    channels: []
    packages: {}
  with-strategy:
    channels: []
    options:
      strategy: lowest-version
    packages: {}
  without-options:
    channels: []
    packages: {}
packages: []
