crates/rattler_lock/src/snapshots/rattler_lock__test__v6__pixi-build-git-rev-only-source-lock.yml.snap
---
source: crates/rattler_lock/src/lib.rs
expression: conda_lock
---
version: 7
platforms:
  - name: linux-64
environments:
  default:
    channels:
      - url: "https://conda.anaconda.org/conda-forge/"
    packages:
      linux-64:
        - conda_source: "pixi-rev-package[db71b0d5] @ pixi-rev-package"
packages:
  - conda_source: "pixi-rev-package[db71b0d5] @ pixi-rev-package"
    version: 0.5.0
    build: pyhbf21a9e_0
    subdir: noarch
    noarch: python
    source:
      git: "https://github.com/example/pixi-package.git"
      rev: 123abc456def789012345678
