crates/rattler_lock/src/snapshots/rattler_lock__test__v6__source-package-with-variants-lock.yml.snap
---
source: crates/rattler_lock/src/lib.rs
expression: conda_lock
---
version: 7
platforms:
  - name: linux-64
environments:
  default:
    channels:
      - url: "https://conda.anaconda.org/conda-forge/"
    packages:
      linux-64:
        - conda_source: "my-package[a2d70ea0] @ my-package"
packages:
  - conda_source: "my-package[a2d70ea0] @ my-package"
    version: 1.0.0
    subdir: noarch
    noarch: generic
    variants:
      target_platform: linux-64
    depends:
      - python >=3.8
    license: MIT
