crates/rattler_lock/src/snapshots/rattler_lock__test__v6__sources-lock.yml.snap
---
source: crates/rattler_lock/src/lib.rs
expression: conda_lock
---
version: 7
platforms:
  - name: win-64
environments:
  default:
    channels:
      - url: "https://conda.anaconda.org/conda-forge/"
    packages:
      win-64:
        - conda_source: "child-package[6d4377d0] @ child-package"
packages:
  - conda_source: "child-package[6d4377d0] @ child-package"
    version: 0.1.0
    build: pyhbf21a9e_0
    subdir: noarch
    noarch: python
    depends:
      - path
      - git_tag
      - git_rev
      - git_branch
    source_depends:
      git_branch:
        git: "https://github.com/example/baz.git"
        branch: foobar
      git_rev:
        git: "https://github.com/example/baz.git"
        rev: deadbeaf
      git_tag:
        git: "https://github.com/example/baz.git"
        tag: v0.1.0
      path:
        path: foobar
      url:
        url: "https://example.com/foobar.tar.gz"
        md5: 1234567890abcdef1234567890abcdef
        sha256: 1234567890abcdef1234567890abcdef1234567890abcdef1234567890abcdef
